--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Cities#edit</h1>
-<p>Find me in app/views/cities/edit.html.erb</p>
+<h1>Edit City</h1>
+
+<%= render 'form' %>
+
+<%= link_to "Delete Team", "#" %>
