--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,9 +1,11 @@
-<%= form_for @team do |t| %>
+<%= form_for [@city, @team] do |t| %>
 
 <%= t.label :name %>
 <%= t.text_field :name %>
-<%= t.label :city %>
-<%= t.text_field :city %>
+<%= t.label :baseball  %>
+<%= t.check_box :baseball %>
+<%= t.label :football %>
+<%= t.check_box :football %>
 
 <%= t.submit %>
 
