--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,11 +1,13 @@
-<h1>
-  Name: <%= @team.name %>
-</h1>
-<h1>
-  City: <%= @team.city %>
-</h1>
-
-<br>
-<br>
-
+<h1> <%= @team.city.name %> <%= @team.name %></h1>
 <%= link_to "Edit Team", edit_team_path(@team.id) %>
+<br>
+<br>
+
+<h3>Players:</h3>
+<ul>
+
+</ul>
+<br>
+<br>
+
+<%= link_to "Add a Player", new_team_player_path(@team.id) %>
